[ADD] all components with basic redux setup

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
+@import 'styles/variables';
+
 .App {
   text-align: center;
 }
@@ -19,4 +21,9 @@
 
 .App-link {
   color: #09d3ac;
+}
+
+.wrapper {
+  max-width: 1200px;
+  margin: auto;
 }
